--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
     implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'org.xutils:xutils:3.5.1'
 //    implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.orhanobut:logger:1.15'
     annotationProcessor project(path: ':ioc-complier')
