--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation project(':ioc-annotations')
     implementation project(':okevent')
     implementation 'org.aspectj:aspectjrt:1.8.13'
+    implementation 'pub.devrel:easypermissions:1.2.0'
     implementation 'com.github.huangyanbin:SmartTable:2.2.0'
 
 //    annotationProcessor("com.tinkerpatch.tinker:tinker-android-anno:${TINKER_VERSION}") { changing = true }
