--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.hujiang.android-aspectjx'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 //apply from: 'tinkerpatch.gradle'
 
@@ -73,7 +74,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'io.reactivex:rxjava:1.1.0'
     implementation 'io.reactivex:rxandroid:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
@@ -83,7 +84,8 @@ dependencies {
     implementation 'org.xutils:xutils:3.5.1'
 //    implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.orhanobut:logger:1.15'
-    annotationProcessor project(path: ':ioc-complier')
+//    annotationProcessor project(path: ':ioc-complier')
+    kapt project(path: ':ioc-complier')
     implementation project(':ioc-api')
     implementation project(':ioc-annotations')
     implementation project(':okevent')
