--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
 //        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
+    kapt {
+        generateStubs = true
+    }
 
     signingConfigs {
         release {
@@ -60,17 +63,18 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    buildToolsVersion '28.0.3'
+
 
 }
 
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
@@ -82,9 +86,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'org.xutils:xutils:3.5.1'
-//    implementation 'org.greenrobot:eventbus:3.1.1'
+    //    implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.orhanobut:logger:1.15'
-//    annotationProcessor project(path: ':ioc-complier')
+    //    annotationProcessor project(path: ':ioc-complier')
     kapt project(path: ':ioc-complier')
     implementation project(':ioc-api')
     implementation project(':ioc-annotations')
@@ -92,10 +96,8 @@ dependencies {
     implementation 'org.aspectj:aspectjrt:1.8.13'
     implementation 'pub.devrel:easypermissions:1.2.0'
     implementation 'com.github.huangyanbin:SmartTable:2.2.0'
-
-//    annotationProcessor("com.tinkerpatch.tinker:tinker-android-anno:${TINKER_VERSION}") { changing = true }
-//    compileOnly("com.tinkerpatch.tinker:tinker-android-anno:${TINKER_VERSION}") { changing = true }
-//    implementation("com.tinkerpatch.sdk:tinkerpatch-android-sdk:${TINKERPATCH_VERSION}") { changing = true }
-
-    implementation "com.android.support:multidex:1.0.2"
+    //    annotationProcessor("com.tinkerpatch.tinker:tinker-android-anno:${TINKER_VERSION}") { changing = true }
+    //    compileOnly("com.tinkerpatch.tinker:tinker-android-anno:${TINKER_VERSION}") { changing = true }
+    //    implementation("com.tinkerpatch.sdk:tinkerpatch-android-sdk:${TINKERPATCH_VERSION}") { changing = true }
+    implementation 'com.android.support:multidex:1.0.2'
 }
