--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,6 @@ dependencies {
     //    implementation("com.tinkerpatch.sdk:tinkerpatch-android-sdk:${TINKERPATCH_VERSION}") { changing = true }
     implementation 'com.android.support:multidex:1.0.2'
     implementation 'com.imyeego.promise:promise-all:1.0.0'
+    implementation 'com.github.ikidou:TypeBuilder:1.0'
+
 }
