--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ repositories {
     }
 }
 dependencies {
+    def room_version = "1.0.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -89,7 +90,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     implementation 'com.google.code.gson:gson:2.6.2'
-    implementation 'org.xutils:xutils:3.5.1'
     implementation 'com.orhanobut:logger:1.15'
     //    annotationProcessor project(path: ':ioc-complier')
     kapt project(path: ':ioc-complier')
@@ -104,5 +104,7 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.2'
     implementation 'com.imyeego.promise:promise-all:1.0.0'
     implementation 'com.github.ikidou:TypeBuilder:1.0'
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
 
 }
