--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ repositories {
     }
 }
 dependencies {
-    def room_version = "1.0.0"
+    def room_version = "1.1.1"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -106,5 +106,6 @@ dependencies {
     implementation 'com.github.ikidou:TypeBuilder:1.0'
     implementation "android.arch.persistence.room:runtime:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 
 }
