增加了从多任务界面关闭程序的监听

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         </activity>
         <activity android:name=".ui.activity.PlaylistActivity"/>
         <service android:name=".service.NetworkService"
-            android:exported="false"/>
+            android:exported="false"
+            android:stopWithTask="false"/>
 
 
 
