--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.hujiang.android-aspectjx'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
-//apply from: 'tinkerpatch.gradle'
+apply from: 'tinker.gradle'
 
 android {
     compileSdkVersion 28
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-//        multiDexEnabled true
+        multiDexEnabled true
 //        multiDexKeepProguard file("tinkerMultidexKeep.pro") //keep specific classes using proguard syntax
 //        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -63,6 +63,10 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    dexOptions {
+        //支持大型项目
+        jumboMode = true
+    }
     buildToolsVersion '28.0.3'
 
 
@@ -74,7 +78,6 @@ repositories {
     }
 }
 dependencies {
-    def room_version = "1.1.1"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -107,5 +110,12 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
+
+    api("com.tencent.tinker:tinker-android-lib:1.9.14") { changing = true }
+    // Maven local cannot handle transist dependencies.
+    implementation("com.tencent.tinker:tinker-android-loader:$tinker_version") { changing = true }
+    annotationProcessor("com.tencent.tinker:tinker-android-anno:$tinker_version") { changing = true }
+    compileOnly("com.tencent.tinker:tinker-android-anno:$tinker_version") { changing = true }
+    implementation "com.android.support:multidex:1.0.1"
 
 }
