--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext {
+        kotlin_version = '1.3.31'
+        room_version = "1.1.1"
+        tinker_version = '1.9.14'
+    }
+
     repositories {
         google()
         jcenter()
@@ -15,6 +20,7 @@ buildscript {
         classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.tencent.tinker:tinker-patch-gradle-plugin:$tinker_version"
 //        classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:${TINKERPATCH_VERSION}"
 
         // NOTE: Do not place your application dependencies here; they belong
