--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 TINKER_VERSION=1.9.6
 TINKERPATCH_VERSION=1.2.6
+
+TINKER_ID=1.0
+TINKER_ENABLE=true
