--- a/libyuv/build.gradle
+++ b/libyuv/build.gradle
@@ -1,32 +1,49 @@
 apply plugin: 'com.android.library'
 
-    android {
+android {
     compileSdkVersion 29
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-      minSdkVersion 19
-      targetSdkVersion 29
-      versionCode 1
-      versionName "1.0"
+        minSdkVersion 19
+        targetSdkVersion 29
+        versionCode 1
+        versionName "1.0"
 
-      testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-      consumerProguardFiles "consumer-rules.pro"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+                abiFilters "armeabi-v7a", "arm64-v8a"
+            }
+        }
+    }
+
+    lintOptions {
+        abortOnError false
     }
 
     buildTypes {
-       release {
-           minifyEnabled false
-           proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-       }
-    }
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
 
-  dependencies {
-    implementation fileTree (dir: "libs", include: ["*.jar"])
-      implementation 'com.android.support:appcompat-v7:28.0.0'
-      testImplementation 'junit:junit:4.12'
-      androidTestImplementation 'com.android.support.test:runner:1.0.2'
-      androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    externalNativeBuild {
+        cmake {
+            path 'CMakeLists.txt'
+        }
+    }
+}
 
-  }
+dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+}
