--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ buildscript {
         kotlin_version = '1.3.31'
         room_version = "1.1.1"
         tinker_version = '1.9.14'
+        rx_version = '1.1.0'
+        retrofit_version = '2.4.0'
+        gson_version = '2.6.2'
+        okhttp_version = '3.10.0'
     }
 
     repositories {
