--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
 
 
@@ -33,10 +34,10 @@
             </intent-filter>
 
         </activity>
-        <service android:name=".service.NetworkService"
-            android:exported="false"
-            android:stopWithTask="false"/>
-
+<!--        <service android:name=".service.NetworkService"-->
+<!--            android:exported="false"-->
+<!--            android:stopWithTask="false" />-->
+<!--        <service android:name=".service.BootService" />-->
 
 
     </application>
